# VortexEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  GenerateProject.bat  LICENSE  Makefile  README.md  Vortex.sln  VortexEngine.kdev4  VortexEngine.sln  compile_commands.json  imgui.ini  premake5.lua
GameProject/: CMakeLists.txt  GameProject.vcxproj  GameProject.vcxproj.filters  Makefile  dna.txt  imgui.ini  premake5.lua
GameProject/.ccls-cache/@@home@unstable@Desktop@VortexEngine@GameProject/: @home@unstable@Desktop@VortexEngine@Vortex@source@Core@ApplicationClass.h.blob  @home@unstable@Desktop@VortexEngine@Vortex@source@Core@Assert.h.blob  @home@unstable@Desktop@VortexEngine@Vortex@source@Core@Core.h.blob  @home@unstable@Desktop@VortexEngine@Vortex@source@Core@Input.h  @home@unstable@Desktop@VortexEngine@Vortex@source@Core@Input.h.blob  @home@unstable@Desktop@VortexEngine@Vortex@source@Core@Layer.h.blob  @home@unstable@Desktop@VortexEngine@Vortex@source@Core@LayerStack.h.blob  @home@unstable@Desktop@VortexEngine@Vortex@source@Core@Logger.h.blob  @home@unstable@Desktop@VortexEngine@Vortex@source@Core@RNG.h.blob  @home@unstable@Desktop@VortexEngine@Vortex@source@Core@RefCounter.h  @home@unstable@Desktop@VortexEngine@Vortex@source@Core@RefCounter.h.blob  @home@unstable@Desktop@VortexEngine@Vortex@source@Core@Time.h.blob  @home@unstable@Desktop@VortexEngine@Vortex@source@Core@Window.h.blob  @home@unstable@Desktop@VortexEngine@Vortex@source@EntryPoint.h.blob  @home@unstable@Desktop@VortexEngine@Vortex@source@Environment@CameraController.h.blob  @home@unstable@Desktop@VortexEngine@Vortex@source@Environment@ComponentModifiers.h.blob  @home@unstable@Desktop@VortexEngine@Vortex@source@Environment@Components.h.blob  @home@unstable@Desktop@VortexEngine@Vortex@source@Environment@Object.h.blob  @home@unstable@Desktop@VortexEngine@Vortex@source@Environment@Scene.h  @home@unstable@Desktop@VortexEngine@Vortex@source@Environment@Scene.h.blob  @home@unstable@Desktop@VortexEngine@Vortex@source@Events@Event.h  @home@unstable@Desktop@VortexEngine@Vortex@source@Events@Event.h.blob  @home@unstable@Desktop@VortexEngine@Vortex@source@Events@KeyCodes.h  @home@unstable@Desktop@VortexEngine@Vortex@source@Events@KeyCodes.h.blob  @home@unstable@Desktop@VortexEngine@Vortex@source@Events@KeyEvent.h  @home@unstable@Desktop@VortexEngine@Vortex@source@Events@KeyEvent.h.blob  @home@unstable@Desktop@VortexEngine@Vortex@source@Events@MouseCodes.h.blob  @home@unstable@Desktop@VortexEngine@Vortex@source@Events@MouseEvents.h  @home@unstable@Desktop@VortexEngine@Vortex@source@Events@MouseEvents.h.blob  @home@unstable@Desktop@VortexEngine@Vortex@source@Events@WindowEvents.h.blob  @home@unstable@Desktop@VortexEngine@Vortex@source@ImGui@ImGuiLayer.h  @home@unstable@Desktop@VortexEngine@Vortex@source@ImGui@ImGuiLayer.h.blob  @home@unstable@Desktop@VortexEngine@Vortex@source@Jobs@JobData.h.blob  @home@unstable@Desktop@VortexEngine@Vortex@source@Jobs@JobScheduler.h  @home@unstable@Desktop@VortexEngine@Vortex@source@Jobs@JobScheduler.h.blob  @home@unstable@Desktop@VortexEngine@Vortex@source@Renderer@Buffers.h.blob  @home@unstable@Desktop@VortexEngine@Vortex@source@Renderer@Camera.h.blob  @home@unstable@Desktop@VortexEngine@Vortex@source@Renderer@Framebuffer.h  @home@unstable@Desktop@VortexEngine@Vortex@source@Renderer@Framebuffer.h.blob  @home@unstable@Desktop@VortexEngine@Vortex@source@Renderer@Mesh.h  (+831 more)
GameProject/.ccls-cache/@home@unstable@Desktop@VortexEngine@GameProject/: source@CustomScene.h.blob  source@ExampleLayer.cpp  source@ExampleLayer.cpp.blob  source@ExampleLayer.h  source@ExampleLayer.h.blob  source@main.cpp  source@main.cpp.blob
GameProject/Models/: PicoShip0.fbx  model.dae  test.dae
GameProject/Shaders/: FlatColor.glsl  fragment.txt  litShader.glsl  litShaderBindless.glsl  shipShader.glsl  textureFragment.txt  textureShader.glsl  textureVertex.txt  unlitShader.glsl  unlitSpriteShader.glsl  unlitSpriteShaderBindless.glsl  vertex.txt
GameProject/source/: ExampleLayer.cpp  ExampleLayer.h  main.cpp
TestGame/: CMakeLists.txt
TestGame/Models/: Ship0.fbx  test.fbx
TestGame/Shaders/: PostEffectShader.glsl  litShader.glsl  unlitShader.glsl  unlitSpriteShader.glsl
TestGame/Textures/gothiccastleassetpack/: Readme.txt
TestGame/source/: CustomScene.h  TestGame.cpp  TestGame.h  main.cpp
TestGame/source/Components/: PlayerComponent.h
TestGame/source/Layers/: PlayerLayer.cpp  PlayerLayer.h  RenderLayer.cpp  RenderLayer.h  WorldLayer.cpp  (+1 more)
Vortex/: CMakeLists.txt  Makefile  Vortex.vcxproj  Vortex.vcxproj.filters  premake5.lua
Vortex/source/: EntryPoint.h  VortexEngine.h  vpch.h  vpch.h.gch
VortexEditor/: CMakeLists.txt  Makefile  VortexEditor.vcxproj  compile_commands.json  imgui.ini  premake5.lua
VortexEditor/Shaders/: PostEffectShader.glsl  litShaderBindless.glsl  shader.glsl  unlitShader.glsl  unlitSpriteShader.glsl  unlitSpriteShaderBindless.glsl
VortexEditor/source/: CustomScene.h  EditorLayer.cpp  EditorLayer.h  VortexEditor.cpp  VortexEditor.h  main.cpp
(+2250 files in other folders)
